# MatlyPY

./: .gitignore  README.md  build.bat  pyproject.toml
.github/workflows/: publish.yml
changelog/: changelog.txt
examples/AI/: model1.py
examples/models/: model1.py
src/MatlyPy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/matlypy/: __init__.py  cmath.py  mathematics.py  model.py  nn.py  plotting.py  tools.py  turtplot.py
src/matlypy/uncompressedC/: cmath.c
test/: main.py
test/test/: ai.py
