[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MatlyPy"
version = "0.2.0"
authors = [{ name="Akshay Singh", email="limesuggestbox360@gmail.com" }]
description = "A small library for making AI models, doing Data analytics, performing calculations & etc! Considor this as a Utility library for Data handling"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "requests",
    "bs4",
    "cv2"
]

[tool.setuptools.packages.find]
where = ["src"]